--- a/CDDSExercises/CDDSExercises.vcxproj
+++ b/CDDSExercises/CDDSExercises.vcxproj
@@ -132,7 +132,7 @@
   <ItemGroup>
     <ClInclude Include="DynamicArray.h" />
     <ClInclude Include="Iterator.h" />
-    <ClInclude Include="List.h" />
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
