--- a/CDDSExercises/CDDSExercises.vcxproj.filters
+++ b/CDDSExercises/CDDSExercises.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClInclude Include="Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="List.h">
+    <ClInclude Include="LinkedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
